--- a/grails-app/conf/application.yml
+++ b/grails-app/conf/application.yml
@@ -59,7 +59,7 @@ dataSource:
 environments:
   development:
     dataSource:
-      dbCreate: create-drop
+      dbCreate: update
       url: jdbc:h2:mem:devDb;LOCK_TIMEOUT=10000;DB_CLOSE_ON_EXIT=FALSE
   test:
     dataSource:
